--- a/index.html
+++ b/index.html
@@ -204,7 +204,21 @@
 
 
 <!--Start Ongoing Activities-->
-<section id="ongoing">
+<section id="ongoing"
+
+class="activities">
+  <div class="container">
+  <div class="row ">
+   <div class="title textcenter">
+    <h1>Ongoing Activities</h1>
+   </div>
+  </div>
+ <div class="row">
+    <div class="activitiescontent">
+        <div class="box">
+          <ul>
+        <!---    <li>MicroMouse</li>
+             <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p> !--->
             <li>Vedanth 11.0</li>
             <p>Coming Soon</p>
 <p>To view past Vedanth Projects :  <a href="project_gallery.html">Click here</a></p>
