--- a/team.html
+++ b/team.html
@@ -140,7 +140,7 @@
          <li>Aaditya Handa</li>
          <li>Dev Sakaria</li>
          <li>Nivas</li>
-         <li>Rubesh Maniamuthan</li>
+         <li>Rubesh Maniamuthan J</li>
          <li>Ruchit Vankar</li>
          <li>Sinchan H</li>
          <li>Umar Mujahid</li>
