--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@ class="activities">
   </div><span> Workshop No.7, MAHE Workshops, <br>Manipal Institute of Technology, <br>Eshwar Nagar, Manipal, <br>Karnataka-576104</span> <br><br>
   <div class="contact_icon">
     <i class="fa fa-envelope-o" aria-hidden="true"></i>
-  </div> <span> rnc.mit@manipal.edu</span> <br><br>
+  </div> <span>roboticsandcircuits.mit@gmail.com</span> <br><br>
    <div class="contact_icon">
     <i class="fa fa-phone" aria-hidden="true"></i>
-  </div><span> +91-6362920197</span>
+  </div><span> +91-77150 01722</span>
   </div>
 </div>
 </div>
