--- a/team.html
+++ b/team.html
@@ -160,7 +160,7 @@
   </div>
         <div class="member">
           <div class="member_img">
-             <img src="images/team/ps.jpeg">
+             <img src="images/team/2020-21/ps.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/parth-sirohi-908933169/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -171,7 +171,7 @@
 
         <div class="member">
            <div class="member_img">
-            <img src="images/team/na.jpeg">
+            <img src="images/team/2020-21/na.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/nihaarika-agarwal-243ab91ba"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -182,7 +182,7 @@
 
         <div class="member">
             <div class="member_img">
-              <img src="images/team/sd.jpeg">
+              <img src="images/team/2020-21/sd.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/shreyas-daga-9214b219b/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -193,7 +193,7 @@
 
         <div class="member">
            <div class="member_img">
-            <img src="images/team/sa1.jpeg">
+            <img src="images/team/2020-21/sa1.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/saloni-agarwal-7aa5821a7/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -204,7 +204,7 @@
 
         <div class="member">
           <div class="member_img">
-            <img src="images/team/nt.jpeg">
+            <img src="images/team/2020-21/nt.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/neil-tyrone-pereira-025a751b3/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -215,7 +215,7 @@
 
         <div class="member">
           <div class="member_img">
-            <img src="images/team/codinghead.jpg">
+            <img src="images/team/2020-21/codinghead.jpg">
              <div class="social_media">
               <a href="https://www.linkedin.com/in/rushil-jhaveri-218a6016a/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -226,7 +226,7 @@
 
         <div class="member">
            <div class="member_img">
-            <img src="images/team/ba1.jpeg">
+            <img src="images/team/2020-21/ba1.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -237,7 +237,7 @@
 
         <div class="member">
            <div class="member_img">
-            <img src="images/team/ap.jpeg">
+            <img src="images/team/2020-21/ap.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/anant-pandey-4b73191b2/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -248,7 +248,7 @@
 
         <div class="member">
            <div class="member_img">
-            <img src="images/team/ag.jpeg">
+            <img src="images/team/2020-21/ag.jpeg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/ashwin-gopalakrishnan-31498318b/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -338,7 +338,7 @@
    </div>
          <div class="member">
            <div class="member_img">
-              <img src="images/team/member1.jpeg">
+              <img src="images/team/2019-20/member1.jpeg">
                <div class="social_media">
                <a href="https://www.linkedin.com/in/titiksha-wagh"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -349,7 +349,7 @@
 
          <div class="member">
             <div class="member_img">
-              <img src="images/team/member2.jpeg">
+              <img src="images/team/2019-20/member2.jpeg">
                <div class="social_media">
                <a href="https://www.linkedin.com/in/khushal-kapoor-646171181/"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -360,7 +360,7 @@
 
          <div class="member">
              <div class="member_img">
-              <img src="images/team/member3.jpg">
+              <img src="images/team/2019-20/member3.jpg">
                <div class="social_media">
                <a href="https://www.linkedin.com/in/kartikeya-pandey-b5b9b3181/"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -371,7 +371,7 @@
 
          <div class="member">
             <div class="member_img">
-              <img src="images/team/member4.jpg">
+              <img src="images/team/2019-20/member4.jpg">
                <div class="social_media">
                <a href="https://www.linkedin.com/in/grissel-mathias-203391158/"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -382,7 +382,7 @@
 
          <div class="member">
            <div class="member_img">
-              <img src="images/team/member5.jpg">
+              <img src="images/team/2019-20/member5.jpg">
                <div class="social_media">
                <a href="https://www.linkedin.com/in/saransh-agrawal8899/"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -393,7 +393,7 @@
 
          <div class="member">
            <div class="member_img">
-             <img src="images/team/member6.jpg">
+             <img src="images/team/2019-20/member6.jpg">
               <div class="social_media">
                <a href="https://www.linkedin.com/in/raloue/"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -404,7 +404,7 @@
 
          <div class="member">
             <div class="member_img">
-              <img src="images/team/member7.jpg">
+              <img src="images/team/2019-20/member7.jpg">
                <div class="social_media">
                <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -415,7 +415,7 @@
 
          <div class="member">
             <div class="member_img">
-              <img src="images/team/member8.jpg">
+              <img src="images/team/2019-20/member8.jpg">
                <div class="social_media">
                <a href="https://www.linkedin.com/in/gagan-j-50b6aa134/"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -426,7 +426,7 @@
 
          <div class="member">
             <div class="member_img">
-              <img src="images/team/member9.jpg">
+              <img src="images/team/2019-20/member9.jpg">
                <div class="social_media">
                <a href="https://www.linkedin.com/in/ammaralam221/"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -437,7 +437,7 @@
 
        <div class="member">
             <div class="member_img">
-              <img src="images/team/member10.jpg">
+              <img src="images/team/2019-20/member10.jpg">
                <div class="social_media">
                <a href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
              </div>
@@ -448,7 +448,7 @@
 
          <div class="member">
             <div class="member_img">
-              <img src="images/team/member11.jpg">
+              <img src="images/team/2019-20/member11.jpg">
                <div class="social_media">
                <a href="https://www.linkedin.com/in/vishnu-bhargav-82b419175/"><i class="fa fa-linkedin"></i></a>
              </div>
