--- a/vedanth.html
+++ b/vedanth.html
@@ -1,139 +1,233 @@
-<!DOCTYPE html>
++<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Vedanth</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
-    <style>
-
- /*body,html{
-  padding: 0;
-  margin: 0;
-  font-family: sans-serif;
-  background: #000;
-}*/
-html {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #2d3436;
-  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
-}
-a:link, a:visited {
-  background-color:transparent;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-#btn {
-  background: #222;
-  height: 50px;
-  min-width: 150px;
-  border: none;
-  border-radius: 10px;
-  color: #eee;
-  font-size: 40px;
-  font-family: 'Cookie', cursive;
-  position: relative;
-  transition: 1s;
-  -webkit-tap-highlight-color: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  padding-top: 5px;
-}
-
-#btn #circle {
-  width: 5px;
-  height: 5px;
-  background: transparent;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  overflow: hidden;
-  transition: 500ms;
-}
-
-.noselect {
-  -webkit-touch-callout: none;
-    -webkit-user-select: none;
-     -khtml-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-}
-
-#btn:hover {
-  background: transparent;
-}
-
-#btn:hover #circle {
-  height: 50px;
-  width: 150px;
-  left: 0;
-  border-radius: 0;
-  border-bottom: 2px solid #eee;
-}
-.container{
-  text-align: center;
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  width: 100%;
-}
-.container span{
-  display: block;
-}
-.text1{
-  color: #f5f5f5;
-  font-size: 60px;
-  font-weight: 700;
-  letter-spacing: 8px;
-  margin-bottom: 40px;
-  background: black;
-  position: relative;
-  animation: text 3s 1;
-}
-.text2{
-  font-size: 20px;
-  color: #ffffffff;
-  
-}
-
-@keyframes text {
-  0%{
-    color: black;
-    margin-bottom: -40px;
-  }
-  30%{
-    letter-spacing: 25px;
-    margin-bottom: -40px;
-  }
-  85%{
-    letter-spacing: 8px;
-    margin-bottom: -40px;
-  }
-}
-</style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Official website of RNC Manipal, Student Team at Manipal Institute of Technology-Vedanth">
+    <meta name="keywords" content="RNC, Manipal, Robotics Club,Robotics team">
+    <meta name="author" content="Rushil Jhaveri">
+    <title>Vedanth 11.0</title>
+    <link rel="icon" href="images/logo/hlogo.png" type="image">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style20.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   </head>
-  <body>
 
-<div class="container">
-  <span class="text1">VEDANTH 11.0</span>
-  <span class="text2">C O M I N G _ S O O N</span>
-</div>
-<br>
-<br>
+<body>
 
-  
-   <div id="btn"><a href="project_gallery.html"><span class="noselect">View Vedanth Projects</span><div id="circle"></div></a>
+<!--start header-->
+<header>
+ <div class="container">
+ <div class="row">
+    <img src="images/logo/hlogo.png"  height=65px>
+  <div class="ham-burger">
+    <i class="fa fa-bars" aria-hidden="true"></i>
+  <div>
+  <div class="navbar">
+        <ul>
+          <li><a href="index.html#home">Home</a></li>
+          <li><a href="index.html#about_us">About Us</a></li>
+          <li><a href="index.html#our_work">Our Work</a></li>
+          <li><a href="team.html">Team</a></li>
+          <li><a href="vedanth.html" class="active" >Vedanth</a></li>
+          <li><a href="project_gallery.html" >Projects </a></li>
+          <li><a href="index.html#contact">Contact Us</a></li>
+        </ul>
+   </div>
   </div>
-  </body>
+ </div>
+</header>
+<!--end header-->
+
+
+<!--start blog title-->
+<section id="home" class="home">
+  <div class="container">
+    <div class="row fullscreen">
+      <div class="homecontent">
+       <div class="block">
+        <div class="row">
+        <div class="typewriter">
+         <h6>Imagine Innovate Create</h6>
+        </div>
+        </div>
+        <h1>Vedanth 11.0</h1>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+<!--end blog title-->
+<section class="activities">
+  <div class="container">
+  <div class="row ">
+   <div class="title textcenter">
+    <h1>About the exhibition</h1>
+   </div>
+  </div>
+ <div class="row">
+    <div class="activitiescontent">
+        <div class="box">
+          <p>Vedanth 11.0 is the online technical exhibition of Robotics and Circuits. Teams will present their projects in the form of  descriptive videos in the fields of IOT, machine learning, medical innovation, robotics and automation, technology for social betterment, smart learning and frugal innovation.  Our latest addition is a COVID-19 corner where special emphasis will be given to COVID-19 based projects.</p>
+            <!-- <br> -->
+            <!--
+              <br>
+
+<li>Video-based presentation with a step-wise description of the working project.</li>
+<li>Projects can be: Software / Hardware / Simulation-based.</li>
+<br>
+<h3>Video Description:</h3>
+<br>
+<li>Real-life application of the project</li>
+<li>If the project is:<br>
+(a) A bot: Record the complete working of the bot<br>
+(b) Simulation/Software-based: Running of the simulation/code of the software must be recorded (Complete code is not required)</li>
+<li>Time Limit: 5-15 minutes</li>
+<li>The video, once submitted is FINAL. No changes will be entertained</li>
+<li>Plagiarised and unoriginal content will be rejected</li> -->
+        </div>
+     </div>
+   </div>
+ </div>
+</section>
+<div class="row">
+<div class="title textcenter">
+  <h1>The Projects </h1>
+ </div>
+</div>
+<section class="gallery">
+  <div class="container">
+<div class="gallerycontent">
+ <!--Note: Embedded youtube videos-->
+
+ <div class="item" id="20211">
+  <h2 class="animated bounceInLeft delay-4s">Automated Luggage Handling System</h2>
+  <p>   </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/nK6iBMrzzYU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p class=" vp animated bounceInLeft delay-4s"></p>
+  <div class="vbutton animated bounceIn delay-5s">
+    Read More
+  </div>
+
+</div>
+<div class="item" id="20212">
+  <h2 class="animated bounceInLeft delay-4s">ACE Drone</h2>
+  <p>   </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_UE4mIwjAAE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p class=" vp animated bounceInLeft delay-4s"></p>
+  <div class="vbutton animated bounceIn delay-5s">
+    Read More
+  </div>
+  </div>
+
+  <div class="item" id="20213">
+    <h2 class="animated bounceInLeft delay-4s">Micro-disinfecting Bot</h2>
+    <p>   </p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/5nTD0bgLb4k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p class=" vp animated bounceInLeft delay-4s"></p>
+    <div class="vbutton animated bounceIn delay-5s">
+      Read More
+    </div>
+    </div>
+
+</div>
+</div>
+</section>
+
+  <div id="preview" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="details">
+        <h3 id="title"></h3>
+        <p id="info">Some text</p>
+        <!-- <p><a id="link" href="http://www.google.com">Project Link</a></p> -->
+        <p id="members"></p>
+
+      </div>
+    </div>
+  </div>
+
+<!--start footer-->
+<footer>
+<div class="container">
+ <div class="row">
+
+  <div class="logo">
+
+    <img src="images/logo/flogo.png" height=70px>
+  </div>
+</div>
+<div class="row">
+  <div class="social">
+    <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
+    <a  class="sm_icons" href="https://www.instagram.com/robotics_and_circuits/"> <i class="fa fa-instagram"></i></a>
+    <a class="sm_icons" href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
+    <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
+ </div>
+</div>
+  <p>&copy; 2020 Robotics and Circuits</p>
+</footer>
+
+<div class="mahe"><p>supported by</p>
+<img src="images/logo/mahe-logo.png" height=50px>
+</div>
+<!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=b19855f3-45f8-4d1d-aed3-f2a7401f7988"> </script>
+<!-- End of  Zendesk Widget script -->
+<section class="name">
+  <a href="https://rushiljhaveri.tech/"> <p> Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by Rushil Jhaveri</p></a>
+</section>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-storage.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyD0WfiZqP0xl5nikUOldHFSl6T1lnYa5R8",
+    authDomain: "rncwebsite.firebaseapp.com",
+    databaseURL: "https://rncwebsite.firebaseio.com",
+    projectId: "rncwebsite",
+    storageBucket: "rncwebsite.appspot.com",
+    messagingSenderId: "383651194422",
+    appId: "1:383651194422:web:56ff6b6c640f6dd4161a97",
+    measurementId: "G-6ZS58GB6WR"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+<script>
+  //function to save file
+  function uploadFile(){
+ //alert('Uploading File...')
+    // Created a Storage Reference with root dir
+    var storageRef = firebase.storage().ref();
+    // Get the file from DOM
+    var file = document.getElementById("files").files[0];
+    console.log(file);
+
+    //dynamically set reference to the file name
+    var thisRef = storageRef.child(file.name);
+
+    //put request upload file to firebase storage
+    thisRef.put(file).then(function(snapshot) {
+       alert("File Uploaded !!")
+       console.log('Uploaded a blob or file!');
+    });
+  }
+
+</script>
+
+<!--end footer-->
+<script src="js/script.js"></script>
+<script src="js/modalv.js"></script>
+
+</body>
 </html>
