--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ class="activities">
         <!---    <li>MicroMouse</li>
              <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p> !--->
             <li>Vedanth 11.0</li>
-            <p>Coming Soon</p>
-<p>To view past Vedanth Projects :  <a href="project_gallery.html">Click here</a></p>
+            <!-- <p>Coming Soon</p> -->
+<p>Vedanth 11.0 is <a href="vedanth.html">here</a></p>
           <!--  <li>ROS Training</li>
             <p> ROS for Beginners. Open to all MIT,Manipal students. Click <a href="https://github.com/RNCManipal/ROS_for_Beginners">here</a> to know more.</p>  !-->
           </ul>
