--- a/vedanth.html
+++ b/vedanth.html
@@ -70,7 +70,8 @@
  <div class="row">
     <div class="activitiescontent">
         <div class="box">
-          <p>Vedanth 11.0 is the online technical exhibition of Robotics and Circuits. Teams will present their projects in the form of  descriptive videos in the fields of IOT, machine learning, medical innovation, robotics and automation, technology for social betterment, smart learning and frugal innovation.  Our latest addition is a COVID-19 corner where special emphasis will be given to COVID-19 based projects.</p>
+          <p>Vedanth 11.0 is the online technical exhibition of Robotics and Circuits. Teams will present their projects in the form of  descriptive videos in the fields of IOT, machine learning, medical innovation, robotics and automation, technology for social betterment, smart learning and frugal innovation.</p>
+  <!-- Our latest addition is a COVID-19 corner where special emphasis will be given to COVID-19 based projects. -->
             <!-- <br> -->
             <!--
               <br>
