--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@ class="activities">
             <li>Vedanth 11.0</li>
             <!-- <p>Coming Soon</p> -->
 <p>Vedanth 11.0 is <a href="vedanth.html">here</a></p>
+
+<li>Recruitments'21 coming soon!</li>
           <!--  <li>ROS Training</li>
             <p> ROS for Beginners. Open to all MIT,Manipal students. Click <a href="https://github.com/RNCManipal/ROS_for_Beginners">here</a> to know more.</p>  !-->
           </ul>
