--- a/index.html
+++ b/index.html
@@ -214,15 +214,11 @@ class="activities">
     <div class="activitiescontent">
         <div class="box">
           <ul>
-        <!---    <li>MicroMouse</li>
-             <p> As one of our flagship projects, we are currently designing our own version of the micromouse for the International Micromouse Challenge.</p> !--->
             <li>Vedanth 11.0</li>
-            <!-- <p>Coming Soon</p> -->
-<p>Vedanth 11.0 is <a href="vedanth.html">here</a></p>
-
-<li>Recruitments'21 coming soon!</li>
-          <!--  <li>ROS Training</li>
-            <p> ROS for Beginners. Open to all MIT,Manipal students. Click <a href="https://github.com/RNCManipal/ROS_for_Beginners">here</a> to know more.</p>  !-->
+            <p>Vedanth 11.0 is <a href="vedanth.html">here</a></p>
+            <li>Virtual RobotX Competition 2022</li>
+            <p>VRX Phase 1 <a href="https://youtu.be/cZdb9_lSOd4">video</a></p>
+            <li>Recruitments'21 coming soon!</li>
           </ul>
         </div>
      </div>
