--- a/team.html
+++ b/team.html
@@ -139,11 +139,12 @@
        <ul>
          <li>Aaditya Handa</li>
          <li>Dev Sakaria</li>
-         <li>Nivas</li>
+         <li>Nivas Kotha</li>
          <li>Rubesh Maniamuthan J</li>
-         <li>Ruchit Vankar</li>
+         <li>Ruchit S. Vankar</li>
          <li>Sinchan H</li>
          <li>Umar Mujahid</li>
+         <li>Chaitanya Sai Nikith Rambha</li>
        </ul>
     </div>
 
