--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ class="activities">
             <li>Virtual RobotX Competition 2022</li>
             <p>VRX Phase 1 <a href="https://youtu.be/cZdb9_lSOd4">video</a></p>
             <li>Recruitments'21 coming soon!</li>
-            <p>Register <a href="https://forms.gle/SMgMwcNbbbz4ik3u8">here</a></p>
+            <p>Test to go live SOON!!!</p>
           </ul>
         </div>
      </div>
