--- a/team.html
+++ b/team.html
@@ -60,7 +60,7 @@
   </div>
         <div class="member">
           <div class="member_img">
-             <img src="images/team/2021-22/sairaj_nayak.jpg">
+             <img src="images/team/2021-22/Sairaj.jpg">
               <div class="social_media">
               <a href="https://www.linkedin.com/in/sairaj-nayak/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -135,18 +135,54 @@
     </div>
 
     <div class="domains" >
-       <h5>Sophomores</h5>
+       <h5>Coding</h5>
        <ul>
-         <li>Aaditya Handa</li>
-         <li>Dev Sakaria</li>
-         <li>Nivas Kotha</li>
-         <li>Rubesh Maniamuthan J</li>
-         <li>Ruchit S. Vankar</li>
-         <li>Sinchan H</li>
-         <li>Umar Mujahid</li>
-         <li>Chaitanya Sai Nikith Rambha</li>
+            <li>B L Siddhartha Bhat</li>
+            <li>suyog chougule</li>
+            <li>Nivas Kotha</li>
+            <li>Piyush Pankaj Panigrihi</li>
+            <li>Priyasu Karak</li>
+            <li>Kushagra Makkar</li>
+            <li>Kajal Madhusudan</li>
+            <li>Disha Agarwal</li>
        </ul>
-    </div>
+      </div>
+
+      <div class="domains" >  
+       <h5>Electronics & Simulation</h5>
+       <ul>
+            <li>Rubesh Maniamuthan J</li>
+            <li>Ruchit S. Vankar</li>
+            <li>K Sai Kavya</li>
+            <li>Dev S  Sakaria</li>
+            <li>Harsh Sancheti</li>
+            <li>Yash Agrawal</li>
+            <li>Ahona Rakshit</li>
+            <li>Harshitha Ashok</li>
+            <li>Avyaktha Thantry</li>
+            <li>Ryan Pinto</li>
+       </ul>
+      </div>
+
+      <div class="domains">
+       <h5>Mechanical</h5>
+       <ul>
+            <li>Suryansh Sunil</li>
+            <li>Naimisha kaza</li>
+            <li>R. Chaitanya Sai Nikith</li>
+            <li>Mahadevanaidu Parimi</li>
+            <li>Somya Nalwaya</li>
+       </ul>
+      </div>
+
+      <div class="domains">
+       <h5>Management</h5>
+       <ul>
+            <li>Jason Pereira</li>  <!-- Management -->
+            <li>Jaswanth</li>  <!-- Management -->
+            <li>Sinchan H</li>  <!-- Management -->
+      </ul>
+      </div>
 
    </div>
  </div>
