--- a/index.html
+++ b/index.html
@@ -214,10 +214,11 @@ class="activities">
     <div class="activitiescontent">
         <div class="box">
           <ul>
-            <li>Vedanth 11.0</li>
-            <p>Vedanth 11.0 is <a href="vedanth.html">here</a></p>
-            <li>Virtual RobotX Competition 2022</li>
-            <p>VRX Phase 1 <a href="https://youtu.be/cZdb9_lSOd4">video</a></p>
+            <li>Virtual RobotX Competition VRX2022 Final Round</li>
+            <li>Smart India Hackathon 2022</li>
+            <p>Borewell Rescue Operations</p>
+            <li>RnC Recruitment 2022</li>
+            <p><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=Qr2-Kf_xPUyWiAZ-NGDcHycl6La_m81Cst-Zfk-SExZUQlZMSFM5MzBOTllRM09URlBZWjhFNExSSS4u">Registration Link</a></p>
           </ul>
         </div>
      </div>
