--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ class="activities">
           <ul>
             <li>Virtual RobotX Competition VRX2022 Final Round</li>
             <li>Smart India Hackathon 2022</li>
-            <p>Borewell Rescue Operations</p>
+            <p><a href="https://youtu.be/153EoAt6Bks">Borewell Rescue Operations</a></p>
             <li>RnC Recruitment 2022</li>
             <p><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=Qr2-Kf_xPUyWiAZ-NGDcHycl6La_m81Cst-Zfk-SExZUQlZMSFM5MzBOTllRM09URlBZWjhFNExSSS4u">Registration Link</a></p>
           </ul>
