--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@ class="activities">
         <div class="box">
           <ul>
             <li>Virtual RobotX Competition VRX2022 Final Round</li>
+            <p><a href="https://youtu.be/cZdb9_lSOd4">Introduction Video</a></p>
             <li>Smart India Hackathon 2022</li>
             <p><a href="https://youtu.be/153EoAt6Bks">Borewell Rescue Operations</a></p>
             <li>RnC Recruitment 2022</li>
