Changes on ongoing activities

--- a/index.html
+++ b/index.html
@@ -214,12 +214,15 @@ class="activities">
     <div class="activitiescontent">
         <div class="box">
           <ul>
+            <!---
             <li>Virtual RobotX Competition VRX2022 Final Round</li>
             <p><a href="https://youtu.be/cZdb9_lSOd4">Introduction Video</a></p>
             <li>Smart India Hackathon 2022</li>
             <p><a href="https://youtu.be/153EoAt6Bks">Borewell Rescue Operations</a></p>
+            -->
+            <li>Vedanth 12.0 coming soon</li>
             <li>RnC Recruitment 2022</li>
-            <p><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=Qr2-Kf_xPUyWiAZ-NGDcHycl6La_m81Cst-Zfk-SExZUQlZMSFM5MzBOTllRM09URlBZWjhFNExSSS4u">Registration Link</a></p>
+            <p><a href="https://forms.office.com/r/QxpvwNLDdX">Registration Link</a></p>
           </ul>
         </div>
      </div>
