Updated team list

--- a/team.html
+++ b/team.html
@@ -139,28 +139,26 @@
        <ul>
             <li>B L Siddhartha Bhat</li>
             <li>suyog chougule</li>
-            <li>Nivas Kotha</li>
-            <li>Piyush Pankaj Panigrihi</li>
             <li>Priyasu Karak</li>
             <li>Kushagra Makkar</li>
-            <li>Kajal Madhusudan</li>
             <li>Disha Agarwal</li>
+            <li>Kishika Singh</li>
+            <li>Yashika Goyal</li>
+            <li>Priyasu Karak</li>
+            <li>Jason Dmello</li>
        </ul>
       </div>
 
       <div class="domains" >  
        <h5>Electronics & Simulation</h5>
        <ul>
-            <li>Rubesh Maniamuthan J</li>
-            <li>Ruchit S. Vankar</li>
-            <li>K Sai Kavya</li>
             <li>Dev S  Sakaria</li>
             <li>Harsh Sancheti</li>
             <li>Yash Agrawal</li>
             <li>Ahona Rakshit</li>
             <li>Harshitha Ashok</li>
             <li>Avyaktha Thantry</li>
-            <li>Ryan Pinto</li>
+            <li>Purbasha Rauth</li>
        </ul>
       </div>
 
@@ -168,10 +166,9 @@
        <h5>Mechanical</h5>
        <ul>
             <li>Suryansh Sunil</li>
-            <li>Naimisha kaza</li>
             <li>R. Chaitanya Sai Nikith</li>
-            <li>Mahadevanaidu Parimi</li>
             <li>Somya Nalwaya</li>
+            <li>Ayush Sarkar</li>
        </ul>
       </div>
 
@@ -179,8 +176,6 @@
        <h5>Management</h5>
        <ul>
             <li>Jason Pereira</li>  <!-- Management -->
-            <li>Jaswanth</li>  <!-- Management -->
-            <li>Sinchan H</li>  <!-- Management -->
       </ul>
       </div>
 
