--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@ class="activities">
             <p><a href="https://youtu.be/153EoAt6Bks">Borewell Rescue Operations</a></p>
             -->
             <li>Vedanth 12.0 coming soon</li>
-            <li>RnC Recruitment 2022</li>
-            <p><a href="https://forms.office.com/r/QxpvwNLDdX">Registration Link</a></p>
+            <p><a href="https://forms.gle/TVpRymgaJryCaQna9">Registration Link</a></p>
+            <!-- <li>RnC Recruitment 2022</li>
+            <p><a href="https://forms.office.com/r/QxpvwNLDdX">Registration Link</a></p> -->
           </ul>
         </div>
      </div>
