--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="#about_us">About Us</a></li>
           <li><a href="#our_work">Our Work</a></li>
           <li><a href="team.html">Team</a></li>
-          <li><a href="vedanth.html">Vedanth</a></li>
+          <li><a href="vedanthcs.html">Vedanth</a></li>
           <li><a href="project_gallery.html">Projects</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
