--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
           <li><a href="index.html#about_us">About Us</a></li>
           <li><a href="index.html#our_work">Our Work</a></li>
           <li><a href="team.html" class="active">Team</a></li>
-          <li><a href="vedanth.html" >Vedanth</a></li>
+          <li><a href="vedanthcs.html" >Vedanth</a></li>
           <li><a href="project_gallery.html">Projects </a></li>
           <li><a href="index.html#contact">Contact Us</a></li>
         </ul>
