--- a/vedanth.html
+++ b/vedanth.html
@@ -163,7 +163,7 @@
 <div class="row">
   <div class="social">
     <a class="sm_icons" href="https://www.facebook.com/RnCmanipal/"> <i class="fa fa-facebook"></i></a>
-    <a  class="sm_icons" href="https://www.instagram.com/robotics_and_circuits/"> <i class="fa fa-instagram"></i></a>
+    <a  class="sm_icons" href="https://www.instagram.com/rnc_manipal"> <i class="fa fa-instagram"></i></a>
     <a class="sm_icons" href="https://www.linkedin.com/company/robotics-and-circuits"><i class="fa fa-linkedin"></i></a>
     <a class="sm_icons" href="https://github.com/RNCManipal"><i class="fa fa-github"></i></a>
  </div>
