--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@ class="activities">
             <li>Smart India Hackathon 2022</li>
             <p><a href="https://youtu.be/153EoAt6Bks">Borewell Rescue Operations</a></p>
             -->
-            <li>Vedanth 12.0 coming soon</li>
-            <p><a href="https://forms.gle/TVpRymgaJryCaQna9">Registration Link</a></p>
-            <!-- <li>RnC Recruitment 2022</li>
-            <p><a href="https://forms.office.com/r/QxpvwNLDdX">Registration Link</a></p> -->
+            <!--<li>Vedanth 12.0 coming soon</li>
+            <p><a href="https://forms.gle/TVpRymgaJryCaQna9">Registration Link</a></p>-->
+            <li>RnC Recruitment 2022</li>
+            <p><a href="https://forms.gle/BmWTpfThFFrPGXBu6">Registration Link</a></p>
           </ul>
         </div>
      </div>
