--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@
   <div class="navbar">
        <ul>
           <li><a href="index.html#home">Home</a></li>
-           <li><a href="index.html#ongoing">Ongoing Activities</a></li>
+          <li><a href="index.html#ongoing">Ongoing Activities</a></li>
           <li><a href="index.html#about_us">About Us</a></li>
           <li><a href="index.html#our_work">Our Work</a></li>
           <li><a href="team.html" class="active">Team</a></li>
@@ -53,7 +53,146 @@
 </section>
 <!--end blog title-->
 
-<!--start Board-->
+<!-- START BOARD 2023 -->
+<section class="board">
+  <div class="title textcenter">
+    <h1>Board 2023</h1>
+  </div>
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/chaitanya.png">
+              <div class="social_media">
+              <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+          </div>
+          <h3>R. Chaitanya Sai Nikith</h3>
+          <h5>Team Leader</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/siddhartha.jpeg">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/siddhartha-bhat-9236b11b6/"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Siddhartha Bhat</h3>
+          <h5>Project Manager</h5>
+        </div>
+</section>
+
+<section class="board">
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/disha.jpg">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/disha-ag-1b71651b1"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Disha Agarwal</h3>
+          <h5>Coding Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/ayush.png">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/ayush-sarkar-851946227"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Ayush Sarkar</h3>
+          <h5>Mechanical Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/ahona.png">
+              <div class="social_media">
+              <a href="https://www.linkedin.com/in/ahona-rakshit-a9340b252"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Ahona Rakshit</h3>
+          <h5>Electronics Head</h5>
+        </div>
+
+        <div class="member">
+          <div class="member_img">
+              <img src="images/team/2022-23/kishika.png">
+              <div class="social_media">
+              <a href="http://linkedin.com/in/kishika-singh-a54651258/"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+          <h3>Kishika Singh</h3>
+          <h5>Simulations Head</h5>
+        </div>
+</section>
+<!-- END BOARD 2023-->
+
+
+
+<section class="others">
+ <div class="title textcenter">
+   <h1>Team Members</h1>
+  </div>
+  <div class="row">
+    <div class="teamcontent">
+      <div class="domains" >
+        <h5>Senior Team Members</h5>
+         <ul>
+            <li>Dev S  Sakaria</li>
+            <li>Suryansh Sunil</li>
+         </ul>
+    </div>
+
+    <div class="domains" >
+       <h5>Coding & Simulation</h5>
+       <ul>
+            <li>Yashika Goyal</li>
+            <li>Priyasu Karak</li>
+            <li>Jason Dmello</li>
+            <li>Siya Kothari</li>
+            <li>Nilay Nishant</li>
+            <li>Ritish Jindal</li>
+       </ul>
+      </div>
+
+      <div class="domains" >  
+       <h5>Electronics</h5>
+       <ul>
+            <li>Harshitha Ashok</li>
+            <li>Avyaktha Thantry</li>
+            <li>Purbasha Rauth</li>
+            <li>Kashin Mittal</li>
+            <li>Poonguzhali Sivakumar</li>
+       </ul>
+      </div>
+
+      <div class="domains">
+       <h5>Mechanical</h5>
+       <ul>
+            <li>Somya Nalwaya</li>
+            <li>Shreyans Goyal</li>
+       </ul>
+      </div>
+
+      <div class="domains">
+       <h5>Management</h5>
+       <ul>
+            <li>Disha Gupta</li>
+      </ul>
+      </div>
+
+   </div>
+ </div>
+
+</section>
+
+
+
+
+<!-- OLD BOARD -->
+
+<!-- START BOARD 2021-->
 <section class="board">
   <div class="title textcenter">
     <h1>Board 2022</h1>
@@ -115,10 +254,10 @@
           <h5>Electronics and Simulations Head</h5>
         </div>
    </section>
-<!--End Board-->
+<!-- END BOARD 2022-->
 
-
-
+<!-- TEAM MEMBERS 2022-->
+<!-- 
 <section class="others">
  <div class="title textcenter">
    <h1>Team Members</h1>
@@ -175,17 +314,19 @@
       <div class="domains">
        <h5>Management</h5>
        <ul>
-            <li>Jason Pereira</li>  <!-- Management -->
-      </ul>
-      </div>
-
+            <li>Jason Pereira</li>
+          </ul>
+        </div>
+  
+     </div>
    </div>
- </div>
+  
+  </section>
+-->
 
-</section>
 
 
-<!--start Board-->
+<!--start Board 2021-->
 <section class="board">
   <div class="title textcenter">
     <h1>Board 2021</h1>
