--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ class="activities">
             -->
             <!--<li>Vedanth 12.0 coming soon</li>
             <p><a href="https://forms.gle/TVpRymgaJryCaQna9">Registration Link</a></p>-->
-            <li>RnC Recruitment 2022</li>
-            <p><a href="https://forms.gle/BmWTpfThFFrPGXBu6">Registration Link</a></p>
+            <li>RnC Recruitment 2023</li>
+            <p><a href="https://forms.office.com/r/bK893BUwbB">Registration Link</a></p>
           </ul>
         </div>
      </div>
